k8s/example/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: verana-faucet-hologram-chatbot
   namespace: didcomm-chatbots
   labels:
      app: nginx
spec:
   serviceName: "verana-faucet-hologram-chatbot"
   replicas: 1
   selector:
      matchLabels:
         app: verana-faucet-hologram-chatbot
   template:
      metadata:
         labels:
            app: verana-faucet-hologram-chatbot
      spec:
         containers:
         containers:
         -  name: verana-faucet-hologram-chatbot-sa-container
            image: io2060/vs-agent:v1.2
            imagePullPolicy: Always
            volumeMounts:
            - name: verana-faucet-hologram-chatbot-sa-pv-main
              mountPath: /root/.afj
            ports:
            -  containerPort: 4000
            -  containerPort: 3001
         -  name: verana-faucet-hologram-chatbot-backend-container
            image: veranalabs/verana-faucet-hologram-chatbot:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2903
         -  name: verana-faucet-hologram-chatbot-data-store-container
            image: io2060/2060-datastore:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2904
            volumeMounts:
            - name: verana-faucet-hologram-chatbot-data-store-main
              mountPath: /home/data
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: verana-faucet-hologram-chatbot-pg-pv-main
              mountPath: /var/lib/postgresql/data
         -  name: faucet-app
            image: veranalabs/faucet-app:latest # Adjust to your Docker Hub repository
            imagePullPolicy: Always
            ports:
            - containerPort: 3000
   volumeClaimTemplates: 
   - metadata:
       name: verana-faucet-hologram-chatbot-sa-pv-main
     spec:
       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: verana-faucet-hologram-chatbot-pg-pv-main
     spec:
       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: verana-faucet-hologram-chatbot-data-store-main
     spec:
       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
